rstsr-aocl-ffi/header/blis.h

		// Typedef official complex types to BLIS complex type names.
		typedef  float complex scomplex;
		typedef double complex dcomplex;
	typedef struct scomplex
	{
		float  real;
		float  imag;
	} scomplex;
	typedef struct dcomplex
	{
		double real;
		double imag;
	} dcomplex;
typedef int32_t   f77_int;
typedef int64_t   f77_int;
typedef long int  f77_int;
typedef char      f77_char;
#define caxpby                    CAXPBY
#define daxpby                    DAXPBY
#define saxpby                    SAXPBY
#define zaxpby                    ZAXPBY
#define cimatcopy                 CIMATCOPY
#define comatcopy                 COMATCOPY
#define dimatcopy                 DIMATCOPY
#define domatcopy                 DOMATCOPY
#define simatcopy                 SIMATCOPY
#define somatcopy                 SOMATCOPY
#define zimatcopy                 ZIMATCOPY
#define zomatcopy                 ZOMATCOPY
BLIS_EXPORT_BLIS void caxpby( const f77_int* n,  const scomplex* alpha,  const scomplex *x,  const f77_int* incx,  const scomplex* beta,  scomplex *y,  const f77_int* incy);
BLIS_EXPORT_BLIS void daxpby(const f77_int* n,  const double* alpha,  const double *x,  const f77_int* incx,  const double* beta,  double *y,  const f77_int* incy);
BLIS_EXPORT_BLIS void saxpby( const f77_int* n,  const float* alpha,  const float *x,  const f77_int* incx,  const float* beta,  float *y,  const f77_int* incy);
BLIS_EXPORT_BLIS void zaxpby( const f77_int* n,  const dcomplex* alpha,  const dcomplex *x,  const f77_int* incx,  const dcomplex* beta,  dcomplex *y,  const f77_int* incy);
BLIS_EXPORT_BLIS void cimatcopy(f77_char* trans,  f77_int* rows,  f77_int* cols,  const scomplex* alpha, scomplex* aptr,  f77_int* lda,  f77_int* ldb);
BLIS_EXPORT_BLIS void comatcopy(f77_char* trans,  f77_int* rows,  f77_int* cols,  const scomplex* alpha,  const scomplex* aptr,  f77_int* lda,  scomplex* bptr,  f77_int* ldb);
BLIS_EXPORT_BLIS void domatcopy(f77_char* trans,  f77_int* rows,  f77_int* cols,  const double* alpha,  const double* aptr,  f77_int* lda,  double* bptr,  f77_int* ldb);
BLIS_EXPORT_BLIS void simatcopy( f77_char* trans,  f77_int* rows,  f77_int* cols,  const float* alpha, float* aptr,  f77_int* lda,  f77_int* ldb);
BLIS_EXPORT_BLIS void somatcopy( f77_char* trans,  f77_int* rows,  f77_int* cols,  const float* alpha,  const float* aptr,  f77_int* lda,  float* bptr,  f77_int* ldb);
BLIS_EXPORT_BLIS void zimatcopy(f77_char* trans,  f77_int* rows,  f77_int* cols,  const dcomplex* alpha, dcomplex* aptr,  f77_int* lda,  f77_int* ldb);
BLIS_EXPORT_BLIS void zomatcopy(f77_char* trans,  f77_int* rows,  f77_int* cols,  const dcomplex* alpha,  const dcomplex* aptr,  f77_int* lda,  dcomplex* bptr,  f77_int* ldb);
		// Typedef official complex types to BLIS complex type names.
		typedef  float complex scomplex;
		typedef double complex dcomplex;
	typedef struct scomplex
	{
		float  real;
		float  imag;
	} scomplex;
	typedef struct dcomplex
	{
		double real;
		double imag;
	} dcomplex;
typedef int32_t   f77_int;
typedef int64_t   f77_int;
typedef long int  f77_int;
typedef char      f77_char;