rstsr-openblas-ffi/src/f77blas.rs

    pub fn xtrtri(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut blas_int,
    ) -> c_int;
    pub fn slamch(arg1: *mut c_char) -> f32;
    pub fn dlamch(arg1: *mut c_char) -> f64;
    pub fn qlamch(arg1: *mut c_char) -> xdouble;
    pub fn slamc3(arg1: *mut f32, arg2: *mut f32) -> f32;
    pub fn dlamc3(arg1: *mut f64, arg2: *mut f64) -> f64;
    pub fn qlamc3(arg1: *mut xdouble, arg2: *mut xdouble) -> xdouble;
    pub fn saxpby(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
    );
    pub fn daxpby(
        arg1: *mut blas_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
    );
    pub fn caxpby(
        arg1: *mut blas_int,
        arg2: *mut c_void,
        arg3: *mut f32,
        arg4: *mut blas_int,
        arg5: *mut c_void,
        arg6: *mut f32,
        arg7: *mut blas_int,
    );
    pub fn zaxpby(
        arg1: *mut blas_int,
        arg2: *mut c_void,
        arg3: *mut f64,
        arg4: *mut blas_int,
        arg5: *mut c_void,
        arg6: *mut f64,
        arg7: *mut blas_int,
    );
    pub fn somatcopy(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
    );
    pub fn domatcopy(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
    );
    pub fn comatcopy(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
    );
    pub fn zomatcopy(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
    );
    pub fn simatcopy(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut blas_int,
    );
    pub fn dimatcopy(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut blas_int,
    );
    pub fn cimatcopy(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut blas_int,
    );
    pub fn zimatcopy(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut blas_int,
    );
    pub fn sgeadd(
        arg1: *mut blas_int,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut f32,
        arg8: *mut blas_int,
    );
    pub fn dgeadd(
        arg1: *mut blas_int,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: *mut blas_int,
    );
    pub fn cgeadd(
        arg1: *mut blas_int,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut f32,
        arg8: *mut blas_int,
    );
    pub fn zgeadd(
        arg1: *mut blas_int,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: *mut blas_int,
    );
}
